Edit the length of title

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">東京電機大学 工学部・未来科学部 第3回旭祭</a>
+                <a class="navbar-brand" href="#">第3回旭祭</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="tagline">東京電機大学 工学部・未来科学部 第3回旭祭</h1>
+                    <h1 class="tagline">第3回旭祭</h1>
                 </div>
             </div>
         </div>
