Adding social button and editing some paragraphs

--- a/index.html
+++ b/index.html
@@ -1,150 +1,163 @@
 <!DOCTYPE html>
 <html lang="jp">
 
-<head>
+    <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。">
-    <meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。">
+	<meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員">
 
-    <title>東京電機大学 工学部・未来科学部 第3回旭祭</title>
+	<title>東京電機大学 工学部・未来科学部 第3回旭祭</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootstrap Core CSS -->
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/business-frontpage.css" rel="stylesheet">
+	<!-- Custom CSS -->
+	<link href="css/business-frontpage.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<![endif]-->
 
-</head>
+    </head>
 
-<body>
+    <body>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	    var js, fjs = d.getElementsByTagName(s)[0];
+	    if (d.getElementById(id)) return;
+	    js = d.createElement(s); js.id = id;
+	    js.src = "//connect.facebook.net/ja_JP/all.js#xfbml=1";
+	    fjs.parentNode.insertBefore(js, fjs);
+	 }(document, 'script', 'facebook-jssdk'));</script>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">第3回旭祭</a>
+	<!-- Navigation -->
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">第3回旭祭</a>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+			<li>
+                            <a href="#">概要</a>
+			</li>
+			<li>
+                            <a href="#">イベント</a>
+			</li>
+			<li>
+                            <a href="#">お問い合わせ</a>
+			</li>
+                    </ul>
+		</div>
+		<!-- /.navbar-collapse -->
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">概要</a>
-                    </li>
-                    <li>
-                        <a href="#">イベント</a>
-                    </li>
-                    <li>
-                        <a href="#">お問い合わせ</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+            <!-- /.container -->
+	</nav>
 
-    <!-- Image Background Page Header -->
-    <!-- Note: The background image is set within the business-casual.css file. -->
-    <header class="business-header">
-        <div class="container">
+	<!-- Image Background Page Header -->
+	<!-- Note: The background image is set within the business-casual.css file. -->
+	<header class="business-header">
+            <div class="container">
+		<div class="row">
+                    <div class="col-lg-12">
+			<h1 class="tagline">第3回旭祭</h1>
+                    </div>
+		</div>
+            </div>
+	</header>
+
+	<!-- Page Content -->
+	<div class="container">
+
+            <hr>
+
             <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="tagline">第3回旭祭</h1>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <hr>
-
-        <div class="row">
-            <div class="col-sm-8">
-                <h2>What We Do</h2>
-                <p>Introduce the visitor to the business using clear, informative text. Use well-targeted keywords within your sentences to make sure search engines can find the business.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et molestiae similique eligendi reiciendis sunt distinctio odit? Quia, neque, ipsa, adipisci quisquam ullam deserunt accusantium illo iste exercitationem nemo voluptates asperiores.</p>
-                <p>
-                    <a class="btn btn-default btn-lg" href="#">Call to Action &raquo;</a>
-                </p>
-            </div>
-            <div class="col-sm-4">
-                <h2>開催概要</h2>
-                <address>
-                    <strong>東京電機大学 工学部・未来科学部 第3回旭祭</strong>
-                    <br>2014年11月2日（日）〜3日（月・祝）
-                    <br>10時〜18時
-                    <br>
-                </address>
-                <address>
-                    <abbr title="Phone">T:</abbr> <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
-                    <br>
-                    <abbr title="Email">E:</abbr> <a href="mailto:#">name@example.com</a>
-                </address>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <div class="row">
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>声優トークライブ</h2>
-                <p>新田恵海さんと飯田里穂さんがいらっしゃいます！！</p>
-            </div>
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>DJ同好会 クラブイベント</h2>
-                <p>日本のクラブシーンを騒がすあのHommarjuさんがこの日北千住の地を揺らす！</p>
-            </div>
-            <div class="col-sm-4">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                <h2>なんかイベントおしえてください</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会</p>
-                </div>
+		<div class="col-sm-8">
+                    <h2>今年のテーマは、「」。</h2>
+                    <p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・</p>
+                    <p>
+			<a class="btn btn-default btn-lg" href="#">詳しく見る &raquo;</a>
+                    </p>
+		</div>
+		<div class="col-sm-4">
+                    <h2>開催概要</h2>
+                    <address>
+			<strong>東京電機大学 工学部・未来科学部
+			    <br>第3回旭祭</strong>
+			    <br>2014年11月2日(日)〜3日(月・祝)
+			    <br>10時〜16時
+			    <br>
+                    </address>
+                    <address>
+			<abbr title="Twitter"><img src="./images/twitter.png" width="16" height="16" />:</abbr> <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
+			<br>
+			<abbr title="Email"><img src="./images/mail.png" width="16" height="16" />:</abbr> <a href="mailto:info@asahisai.com">info@asahisai.com</a>
+                    </address>
+		    <p><a href="https://twitter.com/share" class="twitter-share-button" data-via="asahisai" data-lang="ja" data-hashtags="asahisai2014">ツイート</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script><div class="fb-like" expr:data-href="data:blog.url" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"/></p>
+		</div>
             </div>
             <!-- /.row -->
-        </footer>
 
-    </div>
-    <!-- /.container -->
+            <hr>
 
-    <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
+            <div class="row">
+		<div class="col-sm-4">
+                    <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
+                    <h2>声優スペシャルトークライブ</h2>
+                    <p>今年は私たちのキャンパスに、なんとアニメ「ラブライブ！」高坂穂乃果役の新田恵海さん、星空凛役の飯田里穂さんがいらっしゃいます！</p>
+		</div>
+		<div class="col-sm-4">
+                    <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
+                    <h2>DJ同好会 クラブイベント</h2>
+                    <p>新生サークル「東京電機大学DJ同好会 FRENZY NETWORK」が満を持しての初イベントを第3回旭祭で解禁！ゲストには日本のクラブシーンを騒がすあのHommarjuさんがいらっしゃいます！いつもの教室が1日限りのダンスフロアに！</p>
+		</div>
+		<div class="col-sm-4">
+                    <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
+                    <h2>なんかイベントおしえてください</h2>
+                    <p>たぶんあるとおもわれるもの
+			<br>音楽系団体ライブ、コンサート
+			<br>各サークル展示
+			<br>研究室公開
+			<br>トレジャーハンター（そんなんあったような）</p>
+		</div>
+            </div>
+            <!-- /.row -->
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+            <hr>
 
-</body>
+            <!-- Footer -->
+            <footer>
+		<div class="row">
+                    <div class="col-lg-12">
+			<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会</p>
+                    </div>
+		</div>
+		<!-- /.row -->
+            </footer>
+
+	</div>
+	<!-- /.container -->
+
+	<!-- jQuery Version 1.11.0 -->
+	<script src="js/jquery-1.11.0.js"></script>
+
+	<!-- Bootstrap Core JavaScript -->
+	<script src="js/bootstrap.min.js"></script>
+
+    </body>
 
 </html>
