Editing paragraphs and adding images

--- a/index.html
+++ b/index.html
@@ -103,60 +103,61 @@
 			    <br>
                     </address>
                     <address>
-			<abbr title="Twitter"><img src="./images/twitter.png" width="16" height="16" />:</abbr> <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
+			<abbr title="Twitter"><img src="./images/twitter.png" width="16" height="16" alt="twitter" />:</abbr> <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
 			<br>
-			<abbr title="Email"><img src="./images/mail.png" width="16" height="16" />:</abbr> <a href="mailto:info@asahisai.com">info@asahisai.com</a>
+			<abbr title="Email"><img src="./images/mail.png" width="16" height="16" alt="mail" />:</abbr> <a href="mailto:info@asahisai.com">info@asahisai.com</a>
                     </address>
-		    <p><a href="https://twitter.com/share" class="twitter-share-button" data-via="asahisai" data-lang="ja" data-hashtags="asahisai2014">ツイート</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script><div class="fb-like" expr:data-href="data:blog.url" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"/></p>
-		</div>
-            </div>
-            <!-- /.row -->
-
-            <hr>
-
-            <div class="row">
-		<div class="col-sm-4">
-                    <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                    <h2>声優スペシャルトークライブ</h2>
-                    <p>今年は私たちのキャンパスに、なんとアニメ「ラブライブ！」高坂穂乃果役の新田恵海さん、星空凛役の飯田里穂さんがいらっしゃいます！</p>
-		</div>
-		<div class="col-sm-4">
-                    <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                    <h2>DJ同好会 クラブイベント</h2>
-                    <p>新生サークル「東京電機大学DJ同好会 FRENZY NETWORK」が満を持しての初イベントを第3回旭祭で解禁！ゲストには日本のクラブシーンを騒がすあのHommarjuさんがいらっしゃいます！いつもの教室が1日限りのダンスフロアに！</p>
-		</div>
-		<div class="col-sm-4">
-                    <img class="img-circle img-responsive img-center" src="http://placehold.it/300x300" alt="">
-                    <h2>なんかイベントおしえてください</h2>
-                    <p>たぶんあるとおもわれるもの
-			<br>音楽系団体ライブ、コンサート
-			<br>各サークル展示
-			<br>研究室公開
-			<br>トレジャーハンター（そんなんあったような）</p>
-		</div>
-            </div>
-            <!-- /.row -->
-
-            <hr>
-
-            <!-- Footer -->
-            <footer>
-		<div class="row">
-                    <div class="col-lg-12">
-			<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会</p>
-                    </div>
+		    <p><a href="https://twitter.com/share" class="twitter-share-button" data-via="asahisai" data-lang="ja" data-hashtags="asahisai2014">ツイート</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+		    <div class="fb-like" expr:data-href="data:blog.url" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"/>
+		    </div>
 		</div>
 		<!-- /.row -->
-            </footer>
 
-	</div>
-	<!-- /.container -->
+		<hr>
 
-	<!-- jQuery Version 1.11.0 -->
-	<script src="js/jquery-1.11.0.js"></script>
+		<div class="row">
+		    <div class="col-sm-4">
+			<img class="img-circle img-responsive img-center" src="./images/lovelive.jpg" alt="lovelive">
+			<h2>声優スペシャルトークライブ</h2>
+			<p>今年は私たちのキャンパスに、なんとアニメ「ラブライブ！」高坂穂乃果役の新田恵海さん、星空凛役の飯田里穂さんがいらっしゃいます！</p>
+		    </div>
+		    <div class="col-sm-4">
+			<img class="img-circle img-responsive img-center" src="./images/frenzynet.jpeg" alt="frenzynet">
+			<h2>DJ同好会 クラブイベント</h2>
+			<p>新生サークル「東京電機大学DJ同好会 FRENZY NETWORK」が満を持しての初イベントを第3回旭祭で解禁！ゲストには日本のクラブシーンを騒がすあのHommarjuさんがいらっしゃいます！いつもの教室が1日限りのダンスフロアに！</p>
+		    </div>
+		    <div class="col-sm-4">
+			<img class="img-circle img-responsive img-center" src="./images/campus.jpg" alt="campus">
+			<h2>なんかイベントおしえてください。</h2>
+			<p>たぶんあるとおもわれるもの
+			    <br>音楽系団体ライブ、コンサート
+			    <br>各サークル展示
+			    <br>研究室公開
+			    <br>トレジャーハンター（そんなんあったような）</p>
+		    </div>
+		</div>
+		<!-- /.row -->
 
-	<!-- Bootstrap Core JavaScript -->
-	<script src="js/bootstrap.min.js"></script>
+		<hr>
+
+		<!-- Footer -->
+		<footer>
+		    <div class="row">
+			<div class="col-lg-12">
+			    <p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会</p>
+			</div>
+		    </div>
+		    <!-- /.row -->
+		</footer>
+
+	    </div>
+	    <!-- /.container -->
+
+	    <!-- jQuery Version 1.11.0 -->
+	    <script src="js/jquery-1.11.0.js"></script>
+
+	    <!-- Bootstrap Core JavaScript -->
+	    <script src="js/bootstrap.min.js"></script>
 
     </body>
 
