Testing AddThis plugin

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </head>
 
     <body>
+	<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-542e810a7be1ccbb" async></script>
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
 	    var js, fjs = d.getElementsByTagName(s)[0];
@@ -47,7 +49,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">第3回旭祭</a>
+                    <a class="navbar-brand" href="#">第3回 旭祭</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -74,7 +76,7 @@
             <div class="container">
 		<div class="row">
                     <div class="col-lg-12">
-			<h1 class="tagline">第3回旭祭</h1>
+			<h1 class="tagline"></h1>
                     </div>
 		</div>
             </div>
@@ -90,17 +92,16 @@
                     <h2>今年のテーマは、「」。</h2>
                     <p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・</p>
                     <p>
-			<a class="btn btn-default btn-lg" href="#">詳しく見る &raquo;</a>
+			<a class="btn btn-primary btn-lg" href="#">詳しく見る &raquo;</a>
                     </p>
 		</div>
 		<div class="col-sm-4">
                     <h2>開催概要</h2>
                     <address>
 			<strong>東京電機大学 工学部・未来科学部
-			    <br>第3回旭祭</strong>
+			    <br>第3回 旭祭</strong>
 			    <br>2014年11月2日(日)〜3日(月・祝)
 			    <br>10時〜16時
-			    <br>
                     </address>
                     <address>
 			<abbr title="Twitter"><img src="./images/twitter.png" width="16" height="16" alt="twitter" />:</abbr> <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
@@ -108,7 +109,7 @@
 			<abbr title="Email"><img src="./images/mail.png" width="16" height="16" alt="mail" />:</abbr> <a href="mailto:info@asahisai.com">info@asahisai.com</a>
                     </address>
 		    <p><a href="https://twitter.com/share" class="twitter-share-button" data-via="asahisai" data-lang="ja" data-hashtags="asahisai2014">ツイート</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
-		    <div class="fb-like" expr:data-href="data:blog.url" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"/>
+		    <div class="fb-like" expr:data-href="data:blog.url" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"/>
 		    </div>
 		</div>
 		<!-- /.row -->
