Changed navbar font color

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 			    <br>10時〜16時
                     </address>
                     <address>
-			<abbr title="Twitter"><img src="./images/twitter.png" width="16" height="16" alt="twitter" />:</abbr> <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
+			<img src="./images/twitter.png" width="16" height="16" alt="twitter" />: <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
 			<br>
-			<abbr title="Email"><img src="./images/mail.png" width="16" height="16" alt="mail" />:</abbr> <a href="mailto:info@asahisai.com">info@asahisai.com</a>
+			<img src="./images/mail.png" width="16" height="16" alt="mail" />: <a href="mailto:info@asahisai.com">info@asahisai.com</a>
                     </address>
 		</div>
 	    </div>
