Adding fadein effect

--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 
+	<!-- Animate.css-->
+	<link href="./css/animate.css" rel="stylesheet">
+
+	<!-- Original stylesheet -->
+	<link href="./css/style.css" rel="stylesheet">
+
     </head>
 
-    <body>
+    <body class="animated fadeIn animation">
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-542e810a7be1ccbb" async></script>
 
