--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
     <head>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。">
-	<meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員">
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。" />
+	<meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員" />
 
 	<title>東京電機大学 工学部・未来科学部 第3回旭祭</title>
 
 	<!-- Bootstrap Core CSS -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet" />
 
 	<!-- Custom CSS -->
-	<link href="css/business-frontpage.css" rel="stylesheet">
+	<link href="css/business-frontpage.css" rel="stylesheet" />
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -25,10 +25,10 @@
 	<![endif]-->
 
 	<!-- Animate.css-->
-	<link href="./css/animate.css" rel="stylesheet">
+	<link href="./css/animate.css" rel="stylesheet" />
 
 	<!-- Original stylesheet -->
-	<link href="./css/style.css" rel="stylesheet">
+	<link href="./css/style.css" rel="stylesheet" />
 
     </head>
 
@@ -87,8 +87,9 @@
 
             <div class="row">
 		<div class="col-sm-8">
-                    <h2>今年のテーマは、「」。</h2>
-                    <p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・</p>
+                    <h2>今年のテーマは、「＿＿＿＿」。</h2>
+                    <p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「＿＿＿＿」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・
+		    <br><strong>このページにある内容はまだ雑です。</strong></p>
                     <p>
 			<a class="btn btn-primary btn-lg" href="#">詳しく見る &raquo;</a>
                     </p>
@@ -111,16 +112,20 @@
 	    <!-- /.row -->
 
 	    <hr>
-
+	    <h1>1日目のみどころ</h1>
 	    <div class="row">
 		<div class="col-sm-4">
-		    <img class="img-circle img-responsive img-center" src="./images/lovelive.jpg" alt="lovelive">
-		    <h2>声優スペシャルトークライブ</h2>
-		    <p>今年は私たちのキャンパスに、なんとアニメ「ラブライブ！」高坂穂乃果役の新田恵海さん、星空凛役の飯田里穂さんがいらっしゃいます！</p>
+		    <img class="img-circle img-responsive img-center" src="./images/lovelive.jpg" alt="lovelive" />
+		    <h2>声優スペシャルトークライブ
+			<br><small><img src="./images/clock.png" class="info-icon" alt="clock" />10:30〜12:00
+			    <br><img src="./images/location.png" class="info-icon" alt="location" />3号館 体育館特設ステージ</small></h2>
+		    <p>今年は私たちのキャンパスに、アニメ「ラブライブ！」高坂穂乃果役の新田恵海さん、星空凛役の飯田里穂さんがいらっしゃいます！</p>
 		</div>
 		<div class="col-sm-4">
-		    <img class="img-circle img-responsive img-center" src="./images/frenzynet.jpeg" alt="frenzynet">
-		    <h2>DJ同好会 クラブイベント</h2>
+		    <img class="img-circle img-responsive img-center" src="./images/frenzynet.jpeg" alt="frenzynet" />
+		    <h2>DJ同好会 クラブイベント
+			<br><small><img src="./images/clock.png" class="info-icon" alt="clock" />10:30〜12:00 13:00〜15:30
+			    <br><img src="./images/location.png" class="info-icon" alt="location" />2号館 2800教室</small></h2>
 		    <p>新生サークル「東京電機大学DJ同好会 FRENZY NETWORK」が満を持しての初イベントを第3回旭祭で解禁！ゲストには日本のクラブシーンを騒がすあのHommarjuさんがいらっしゃいます！いつもの教室が1日限りのダンスフロアに！</p>
 		</div>
 		<div class="col-sm-4">
