--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<div class="col-sm-8">
                     <h2>今年のテーマは、「＿＿＿＿」。</h2>
                     <p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「＿＿＿＿」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・
-		    <br><strong>このページにある内容はまだ雑です。</strong></p>
+			<br><strong>このページにある内容はまだ雑です。</strong></p>
                     <p>
 			<a class="btn btn-primary btn-lg" href="#">詳しく見る &raquo;</a>
                     </p>
@@ -100,7 +100,8 @@
 			<strong>東京電機大学 工学部・未来科学部
 			    <br>第3回 旭祭</strong>
 			    <br>2014年11月2日(日)〜3日(月・祝)
-			    <br>10時〜16時
+			    <br>10:00〜16:00
+			    <br><a href="#">交通アクセス</a>
                     </address>
                     <address>
 			<img src="./images/twitter.png" width="16" height="16" alt="twitter" />: <a href="http://twitter.com/asahisai" target="blank">@asahisai</a>
@@ -112,7 +113,7 @@
 	    <!-- /.row -->
 
 	    <hr>
-	    <h1>1日目のみどころ</h1>
+	    <h1>1日目のみどころ<small> 2014/11/02</small></h1>
 	    <div class="row">
 		<div class="col-sm-4">
 		    <img class="img-circle img-responsive img-center" src="./images/lovelive.jpg" alt="lovelive" />
@@ -125,7 +126,7 @@
 		    <img class="img-circle img-responsive img-center" src="./images/frenzynet.jpeg" alt="frenzynet" />
 		    <h2>DJ同好会 クラブイベント
 			<br><small><img src="./images/clock.png" class="info-icon" alt="clock" />10:30〜12:00 13:00〜15:30
-			    <br><img src="./images/location.png" class="info-icon" alt="location" />2号館 2800教室</small></h2>
+			    <br><img src="./images/location.png" class="info-icon" alt="location" />2号館 8階 2800教室</small></h2>
 		    <p>新生サークル「東京電機大学DJ同好会 FRENZY NETWORK」が満を持しての初イベントを第3回旭祭で解禁！ゲストには日本のクラブシーンを騒がすあのHommarjuさんがいらっしゃいます！いつもの教室が1日限りのダンスフロアに！</p>
 		</div>
 		<div class="col-sm-4">
@@ -135,7 +136,33 @@
 			<br>音楽系団体ライブ、コンサート
 			<br>各サークル展示
 			<br>研究室公開
-			<br>トレジャーハンター（そんなんあったような）</p>
+			<br>トレジャーハンター（そんなんあったような）
+			<br>女装コンテスト？</p>
+		</div>
+	    </div>
+	    <!-- /.row -->
+
+	    <hr>
+	    <h1>2日目のみどころ<small> 2014/11/03</small></h1>
+	    <div class="row">
+		<div class="col-sm-4">
+		    <img class="img-circle img-responsive img-center" src="./images/campus.jpg" alt="campus">
+		    <h2>hoge
+			<br><small><img src="./images/clock.png" class="info-icon" alt="clock" />10:30〜12:00
+			    <br><img src="./images/location.png" class="info-icon" alt="location" />3号館 体育館特設ステージ</small></h2>
+		    <p>fuga</p>
+		</div>
+		<div class="col-sm-4">
+		    <img class="img-circle img-responsive img-center" src="./images/campus.jpg" alt="campus">
+		    <h2>foo
+			<br><small><img src="./images/clock.png" class="info-icon" alt="clock" />10:30〜12:00 13:00〜15:30
+			    <br><img src="./images/location.png" class="info-icon" alt="location" />2号館 2800教室</small></h2>
+		    <p>bar</p>
+		</div>
+		<div class="col-sm-4">
+		    <img class="img-circle img-responsive img-center" src="./images/campus.jpg" alt="campus">
+		    <h2>Lolem</h2>
+		    <p>ipsum</p>
 		</div>
 	    </div>
 	    <!-- /.row -->
@@ -146,7 +173,8 @@
 	    <footer>
 		<div class="row">
 		    <div class="col-lg-12">
-			<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会</p>
+			<p>Copyright &copy; 東京電機大学東京千住キャンパス 第3回旭祭実行委員会<br />
+			    Designed by <a href="http://twitter.com/keisei_1092" target="blank">@keisei_1092</a> (未来科学部 情報メディア学科 3年)</p>
 		    </div>
 		</div>
 		<!-- /.row -->
