Editing festival schedule

--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
 			<li>
-                            <a href="#">概要</a>
+                            <a href="./about.html">概要</a>
 			</li>
 			<li>
                             <a href="#">イベント</a>
 			</li>
 			<li>
                             <a href="#">お問い合わせ</a>
+			</li>
+			<li>
+			    <a href="#">参加団体の方へ</a>
 			</li>
                     </ul>
 		</div>
@@ -99,7 +102,9 @@
                     <address>
 			<strong>東京電機大学 工学部・未来科学部
 			    <br>第3回 旭祭</strong>
-			    <br>2014年11月2日(日)〜3日(月・祝)
+			    <br>2014年11月2日(日)
+			    <br>10:00〜17:00
+			    <br>2014年11月3日(月)
 			    <br>10:00〜16:00
 			    <br><a href="#">交通アクセス</a>
                     </address>
