Editing about page

--- a/about.html
+++ b/about.html
@@ -58,6 +58,9 @@
                     <li>
                         <a href="#">お問い合わせ</a>
                     </li>
+		    <li>
+                        <a href="#">参加団体の方へ</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -71,17 +74,17 @@
         <!-- Introduction Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">About Us
-                    <small>It's Nice to Meet You!</small>
+                <h1 class="page-header">概要
+                    <small>旭祭の由来</small>
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p>「旭祭」という名前は、千代田区神田の旧キャンパスから足立区千住旭町の新キャンパスへ移るにあたり周辺地域の方々と協力し、地域に根づいた学園祭にしたいという想いのもと、名付けられました。</p>
             </div>
         </div>
 
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
+                <h2 class="page-header">第3回 旭祭実行委員会</h2>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
@@ -120,10 +123,10 @@
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
+                <h3>keisei
+                    <small>Webサイト構築手伝い</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>どさくさにまぎれて</p>
             </div>
         </div>
 
