--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 		<div class="col-sm-8">
                     <h2>今年のテーマは、「＿＿＿＿」。</h2>
                     <p>キャンパスが足立区・北千住に移転して3年目の開催となる旭祭。地域との距離もどんどん密接になってきていますが、そんな今年の旭祭のテーマは「＿＿＿＿」です。コメントコメントコメントコメントコメントコメントコメントコメントコメント・・・・・・・
-			<br><strong>このページにある内容はまだ雑です。</strong></p>
+			<br><strong>このページにある内容はまだ雑です。</strong>
+			<br>元ページにあったFeature 01とかのやつ必要だったら実装します。</p>
                     <p>
 			<a class="btn btn-primary btn-lg" href="#">詳しく見る &raquo;</a>
                     </p>
@@ -104,7 +105,7 @@
 			    <br>第3回 旭祭</strong>
 			    <br>2014年11月2日(日)
 			    <br>10:00〜17:00
-			    <br>2014年11月3日(月)
+			    <br>2014年11月3日(月・祝)
 			    <br>10:00〜16:00
 			    <br><a href="#">交通アクセス</a>
                     </address>
