Adding about.html and event.html

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                             <a href="./about.html">概要</a>
 			</li>
 			<li>
-                            <a href="#">イベント</a>
+                            <a href="./event.html">イベント</a>
 			</li>
 			<li>
-                            <a href="#">お問い合わせ</a>
+                            <a href="./contact.html">お問い合わせ</a>
 			</li>
 			<li>
-			    <a href="#">参加団体の方へ</a>
+			    <a href="./notice.html">参加団体の方へ</a>
 			</li>
                     </ul>
 		</div>
@@ -95,7 +95,7 @@
 			<br><strong>このページにある内容はまだ雑です。</strong>
 			<br>元ページにあったFeature 01とかのやつ必要だったら実装します。</p>
                     <p>
-			<a class="btn btn-primary btn-lg" href="#">詳しく見る &raquo;</a>
+			<a class="btn btn-primary btn-lg" href="./about.html">詳しく見る &raquo;</a>
                     </p>
 		</div>
 		<div class="col-sm-4">
