Editing about.html and event.html

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。" />
     <meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員" />
 
-    <title>東京電機大学 工学部・未来科学部 第3回旭祭</title>
+    <title>概要 - 東京電機大学 工学部・未来科学部 第3回旭祭</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -53,13 +53,13 @@
                         <a href="#">概要</a>
                     </li>
                     <li>
-                        <a href="#">イベント</a>
+                        <a href="./event.html">イベント</a>
                     </li>
                     <li>
-                        <a href="#">お問い合わせ</a>
+                        <a href="./contact.html">お問い合わせ</a>
                     </li>
 		    <li>
-                        <a href="#">参加団体の方へ</a>
+                        <a href="./notice.html">参加団体の方へ</a>
                     </li>
                 </ul>
             </div>
@@ -122,11 +122,11 @@
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+                <img class="img-circle img-responsive img-center" src="./images/keisei.png" alt="keisei">
                 <h3>keisei
                     <small>Webサイト構築手伝い</small>
                 </h3>
-                <p>どさくさにまぎれて</p>
+                <p>どさくさにまぎれて（本チャンのときに消します）</p>
             </div>
         </div>
 
