--- a/event2.html
+++ b/event2.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="2014年11月2〜3日に行われる，東京電機大学 東京千住キャンパスの第3回 旭祭の公式ウェブサイトです。">
 	<meta name="author" content="東京電機大学 東京千住キャンパス 第3回旭祭実行委員">
 
-	<title>イベント(1日目) - 東京電機大学 工学部・未来科学部 第3回旭祭</title>
+	<title>イベント(2日目) - 東京電機大学 工学部・未来科学部 第3回旭祭</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -73,11 +73,11 @@
 			<div class="row text-center">
 				<div class="col-lg-12">
 					<ul class="pagination">
-						<li class="active">
-							<a href="#">1日目</a>
-						</li>
 						<li>
-							<a href="./event2.html">2日目</a>
+							<a href="./event.html">1日目</a>
+						</li>
+						<li class="active">
+							<a href="#">2日目</a>
 						</li>
 					</ul>
 				</div>
@@ -89,8 +89,8 @@
 			<!-- Page Heading -->
 			<div class="row">
 				<div class="col-lg-12">
-					<h1 class="page-header">1日目
-						<small>2014年11月2日(日)</small>
+					<h1 class="page-header">2日目
+						<small>2014年11月3日(月・祝)</small>
 					</h1>
 				</div>
 			</div>
@@ -193,11 +193,11 @@
 					<div class="row text-center">
 						<div class="col-lg-12">
 							<ul class="pagination">
-								<li class="active">
-									<a href="#">1日目</a>
-								</li>
 								<li>
-									<a href="./event2.html">2日目</a>
+									<a href="./event.html">1日目</a>
+								</li>
+								<li class="active">
+									<a href="#">2日目</a>
 								</li>
 							</ul>
 						</div>
