Adding addthis plugin to some pages

--- a/event.html
+++ b/event.html
@@ -30,6 +30,8 @@
 	</head>
 
 	<body>
+		<!-- Go to www.addthis.com/dashboard to customize your tools -->
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-542e810a7be1ccbb" async></script>
 
 		<!-- Navigation -->
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
